--- a/.htaccess
+++ b/.htaccess
@@ -8,10 +8,10 @@ Options +FollowSymlinks
 RewriteEngine on
 
 # map neat URL to internal URL
-RewriteRule ^([a-zA-Z0-9]+)/(clients/show)/$   				index.php?token=$1&view=1440&url=$2 [nc,qsa]
+RewriteRule ^([a-zA-Z0-9]+)/(clients/show)/$   				index.php?token=$1&url=$2&view=1440 [nc,qsa]
 RewriteRule ^([a-zA-Z0-9]+)/(clients/show/([0-9]+))/*$   	index.php?token=$1&view=$3&url=$2 [nc,qsa]
 RewriteRule ^([a-zA-Z0-9]+)/(offers/create)/$   			index.php?token=$1&url=$2 [nc,qsa]
-RewriteRule ^([a-zA-Z0-9]+)/(offers/create/([0-9]+))/*$   	index.php?token=$1&payment=$3&url=$2 [nc,qsa]
+RewriteRule ^([a-zA-Z0-9]+)/(offers/create/([0-9]+)/([0-9]+))/*$   	index.php?token=$1&payment=$4&url=$2&uid=$3 [nc,qsa]
 RewriteRule ^([a-zA-Z0-9]+)/(agreements/show)/$   			index.php?token=$1&view=20&url=$2 [nc,qsa]
 RewriteRule ^([a-zA-Z0-9]+)/(agreements/show/([0-9]+))/*$   index.php?token=$1&view=$3&url=$2 [nc,qsa]
 
